:bug: Converted from height css to min-height to ensure responsive looks okay and is not overly tall when content wraps

--- a/src/modules/components/layout/masthead-link-box/masthead-link-box.scss
+++ b/src/modules/components/layout/masthead-link-box/masthead-link-box.scss
@@ -1,8 +1,13 @@
 $module: 'masthead-link-box';
 
 .#{$module} {
-  height: 215px;
+  @include media(tablet) {
+    min-height: 215px;
+  }
   background-color: $black-midnight;
   margin-bottom: -$gutter;
   padding: 20px;
 }
+
+
+
